# mcp-docs

./: .env.example  .gitignore  DESIGN_DOCUMENT.md  ENV_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OBSERVABILITY.md  OBSERVABILITY_ARCHITECTURE.md  OBSERVABILITY_QUICKSTART.md  PROJECT_STRUCTURE.md  PUBLISHING_GUIDE.md  check-ports.sh  cli.py  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  test_server.py
.code-server-config/code-server/: config.yaml
agents/data-processing/: .env.example  Dockerfile  Dockerfile.dev  PYTHON_AGENT_DESIGN.md  README.md  lite-rag-poc.py  requirements.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  UI_DESIGN_README.md  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: link-classes.ts  store.ts
frontend/schemas/: signIn.schema.ts  signup.schema.ts
go-backend/: .air.toml  .dockerignore  Dockerfile  Dockerfile.dev  WEBSITE_INDEXER_DESIGN.md  go.mod  go.sum  main.go
go-backend/api-test/: auth.rest  indexing.rest  plans.rest  projects.rest  subscription.rest
go-backend/app/: app.go  container.go
go-backend/config/: config.go  config_test.go
go-backend/consumers/: indexing_consumer.go
go-backend/db/: postgres.go
go-backend/handlers/: auth.go  auth_test.go  health.go  health_test.go  indexing.go  mocks_test.go  plan.go  project.go  (+2 more)
lib/: PACKAGING_PLAN.md  cli.py  pyproject.toml  test_lib.py
nginx/: nginx.conf
prometheus/: prometheus.yml
promtail/: promtail-config.yml
src/: cli.py  config.py
(+117 files in other folders)
